Slight fix to makefile

--- a/part3/Makefile
+++ b/part3/Makefile
@@ -1,5 +1,6 @@
 obj-y := elevator_calls_wrappers.o
 obj-m := elevator.o
+elevatorMod-objs := elevator_calls_wrappers.o
 
 PWD := $(shell pwd)
 KDIR := /lib/modules/`uname -r`/build
